vendor/ocaml/testsuite/tests/typing-gadts/pr6158.ml.principal.reference

#       type 'a t = T of 'a
type 'a s = S of 'a
type (_, _) eq = Refl : ('a, 'a) eq
#   Characters 46-50:
  let f : (int s, int t) eq -> unit = function Refl -> ();;
                                               ^^^^
Error: This pattern matches values of type (int s, int s) eq
       but a pattern was expected which matches values of type
         (int s, int t) eq
       Type int s is not compatible with type int t 
#     Characters 120-124:
  struct let f : ('a S.s, 'a S.t) eq -> unit = function Refl -> () end;;
                                                        ^^^^
Error: This pattern matches values of type (ex#0 S.s, ex#1 S.t) eq
       but a pattern was expected which matches values of type
         (ex#0 S.s, ex#0 S.t) eq
       The type constructor ex#0 would escape its scope
# 
